# itesm_workshop

./: README.md
ejemplos/: Pytorch_ONNX_OpenVINO_tutorial.ipynb
ejemplos/cifar10/: WS_P2_CIFAR10_Base.ipynb
ejemplos/cifar10/models/: model_cifar10.xml
ejemplos/mnist/: WS_P1_MNIST_Base.ipynb
ejemplos/mnist/models/: mnist_model.xml
ejemplos/ros/repo_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ejemplos/ros/repo_ws/src/ov_nodes/: CMakeLists.txt  setup.py
ejemplos/ros/repo_ws/src/ov_nodes/models/: tiny-yolov3-11.xml
ejemplos/ros/repo_ws/src/ov_nodes/src/: camera_publisher.py  yolo_ov.py
ejemplos/ros/repo_ws/src/ov_nodes/src/ov_nodes/: utils.py
ejemplos/semantica/: WS_P3_Semantica_Base.ipynb
ejemplos/semantica/models/: semantic_model.xml
